# openssl-binaries

./: .gitmodules  CMakeLists.txt  README.md
openssl_build_scripts/: .gitignore
openssl_build_scripts/output/android/openssl-arm64-v8a/lib/: libssl.so.1.1
openssl_build_scripts/output/android/openssl-arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/android/openssl-armeabi-v7a/lib/: libssl.so.1.1
openssl_build_scripts/output/android/openssl-armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/android/openssl-x86/lib/: libssl.so.1.1
openssl_build_scripts/output/android/openssl-x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/android/openssl-x86_64/lib/: libssl.so.1.1
openssl_build_scripts/output/android/openssl-x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/debug/arm64-v8a/include/openssl/: configuration.h
openssl_build_scripts/output/debug/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/debug/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/debug/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/debug/x86_64/include/openssl/: configuration.h
openssl_build_scripts/output/debug/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/release/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/release/armeabi-v7a/include/openssl/: configuration.h
openssl_build_scripts/output/release/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/release/x86/include/openssl/: configuration.h
openssl_build_scripts/output/release/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/output/release/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_build_scripts/tools/: build-android-common.sh  build-android-openssl.sh  build-ios-common.sh
openssl_ios_build_scripts/: .gitignore  build.sh
openssl_ios_build_scripts/output/debug/ios-arm64-simulator/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/debug/ios-arm64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/debug/ios-x86_64-simulator/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/debug/macos-arm64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/debug/macos-x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/ios-arm64-simulator/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/ios-arm64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/ios-x86_64-simulator/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/macos-arm64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/macos-x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/release/ios-arm64-simulator/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/release/ios-arm64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/release/ios-x86_64-simulator/include/openssl/: configuration.h
openssl_ios_build_scripts/output/release/ios-x86_64-simulator/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/release/macos-arm64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
openssl_ios_build_scripts/output/release/macos-x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
